# prog1

./: .gitignore
031224_cpp_compilation/: задача 5v.cpp  рефакторинг.cpp
241210_refactoring/: build_run.bat  refactoring.cpp
241210_test_task5/: build_run.bat  task5.cpp
241216_Quick_Sort/many_file/: build_run.bat
241216_Quick_Sort/one_file/: QuickSort.cpp  build_run.bat
241216_SelectionSort/one_file/: build_run.bat
241224_multi_level_menu/: main2.cpp  main2.hpp  menu_functions.cpp  menu_items.cpp
241224multi-level_menu/: .gitignore  main.cpp  menu.hpp  menu_functions.hpp  menu_items.hpp
250301_Cmake/: build.bat
250301_Cmake/project/: CmakeList.txt  build.bat
250301_Cmake/projects/: CMakeLists.txt  CmakeList.txt
250301_Cmake/projects/long_number/test/: CMakeLists.txt  tempCodeRunnerFile.cpp  test_long_number.cpp
250301_Cmake/projects/vector_list/: CMakeLists.txt
250301_Cmake/projects/vector_list/src/: CMakeLists.txt  doubly_linked_list.cpp  doubly_linked_list.hpp  vector.cpp  vector.hpp
250301_Cmake/projects/vector_list/template_incude_example/: CmakeLists.txt  test_vector.cpp
250301multi_lv_menu_v2/: main.cpp  menu.hpp  menu_f2.cpp  menu_f2.hpp  menu_functions.cpp  menu_functions.hpp  menu_i2.cpp  menu_i2.hpp  menu_items.cpp  menu_items.hpp
250329_LongNumber/: build.bat
250329_LongNumber/projects/: CMakeLists.txt
250329_LongNumber/projects/long_number/test/: CMakeLists.txt  test_l_n.cpp
250329_LongNumber/projects/multi_level_menu/: CMakeLists.txt
250329_LongNumber/projects/multi_level_menu/includes/: CMakeLists.txt  menu_functions.hpp
250424_vector_list/: doubly_linked_list.cpp  vector.cpp
250424_vector_list/template_incude_example/: test_vector.cpp
CMAKE_2/: build.bat
CMAKE_2/project/: CmakeList.txt
tasks/: задача 5.txt  правки кода.txt
(+55 files in other folders)
